# CoWork_Helper

./: CLAUDE.md  DASHBOARD-POLISH-GUIDE.md  README.md  apply-dashboard-styling.js  commit-and-push.bat  custom-dashboard-styling.css  install.bat  install.ps1  make-shortcut.bat  make-shortcut.ps1  primer.cmd  start-prompt.txt
gotchas/: 2026-05-06-bash-vs-windows-git-ownership.md  2026-05-06-bat-needs-pause-to-debug.md  2026-05-06-erpnext-purchase-invoice-blank-item-row.md  2026-05-06-frappe-cloud-cdn-stale-assets.md  2026-05-06-frappe-cloud-update-vs-deploy-assets.md  2026-05-06-frappe-dynamic-link-in-grid.md  2026-05-06-git-bash-bracketed-paste.md  2026-05-06-host-vs-bash-fs-sync.md  2026-05-06-insights-code-vs-sql.md  2026-05-06-insights-dashboard-client-script-styling.md  2026-05-06-insights-dashboard-filter-needs-source-column.md  2026-05-06-insights-dashboard-layout-i-key.md  (+30 more)
projects/quick_purchase_invoice/: .gitignore  DEPLOY.md  DESIGN.md  README.md  license.txt  push-to-github.bat  pyproject.toml  update-push.bat
projects/quick_purchase_invoice/quick_purchase_invoice/: api.py  hooks.py  modules.txt
projects/quick_purchase_invoice/quick_purchase_invoice/public/css/: qpi_styles.css
projects/quick_purchase_invoice/quick_purchase_invoice/quick_purchase_invoice/doctype/quick_purchase_invoice/: quick_purchase_invoice.js  quick_purchase_invoice.json  quick_purchase_invoice.py
projects/quick_purchase_invoice/quick_purchase_invoice/quick_purchase_invoice/doctype/quick_purchase_invoice_item/: quick_purchase_invoice_item.json  quick_purchase_invoice_item.py
(+39 files in other folders)
