[project]
name = "quick_purchase_invoice"
authors = [
    { name = "Syncflo", email = "ops@syncflo.co.za" },
]
description = "QuickBooks-style fast capture of Purchase Invoices for ERPNext (Item or Account row toggle, keyboard-first)."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "quick_purchase_invoice"
